--- a/src/index.css
+++ b/src/index.css
@@ -220,8 +220,8 @@ body > * {
 
 /* Calculator buttons */
 .calc-button {
-  font-family: 'Indie Flower', cursive;
-  font-size: 1.5rem;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 1.25rem;
   font-weight: 700;
   background: #e8e2d0;
   color: #3a3a3a;
